--- a/templates/results.html
+++ b/templates/results.html
@@ -6,6 +6,7 @@
 {% block content %}
   <h1>Results for this submission</h1>
   <p> You have proposed a secret society called <strong>{{ name }}</strong>. </p>
+  <p>{{ name }}'s email address is {{ email }} </p>
   <p>The passcode for the discussion forums is currently: {{ passcode }}</p>
   <p>The capacity of this club is  {{ capacity }} members at a time.</p>
 {% endblock %}
